--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,11 +2,13 @@
 <resources>
 
     <string name="app_name">Taxi Security</string>
+    <string name="search_hint">Enter Destination</string>
     <string name="action_settings">Settings</string>
     <string name="time_allocator">Time Allocator</string>
     <string name="averse">Averse Destination</string>
     <string name="police_details">Police Station Details</string>
     <string name="help">Help</string>
     <string name="about">About Us</string>
+    <string name="enter_your_destination_here">Enter your destination here</string>
 
 </resources>
