create police database

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="about">About Us</string>
     <string name="enter_your_destination_here">Enter your destination here</string>
     <string name="enter_destination">Enter Destination</string>
+    <string name="police_station_theory">Police Station Theory</string>
     
     
     
