--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,7 +12,9 @@
     <string name="enter_your_destination_here">Enter your destination here</string>
     <string name="enter_destination">Enter Destination</string>
     <string name="police_station_theory">Police Station Theory</string>
-    
+    <string name="choose">Details</string>
+    <string name="name">Name</string>
+    <string name="phone">TP Number</string>
     
     
 
